--- a/_includes/navbar-basic.html
+++ b/_includes/navbar-basic.html
@@ -8,8 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-		<a class="navbar-brand" href="#"><img src="{{ "/assets/img/{{ site.logo }}" | relative_url }}" width="18"
-                                              height="18" align="absmiddle" alt=""/></a>
+		<a class="navbar-brand" href="#"><img src="{{ "/assets/img/{{ site.logo }}" | relative_url }}" width="18" height="18" align="absmiddle" alt=""/></a>
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
