--- a/_includes/navbar-right.html
+++ b/_includes/navbar-right.html
@@ -13,11 +13,24 @@
   {% endif %}
 	<li>
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ site.name }} <span class="caret"></span></a>
-		<ul class="dropdown-menu">
-			<li><a href="http://www.box.com">Box</a></li>
-			<li><a href="https://www.concur.com/">Concur</a>
-			</li>
-		</ul>
+    <ul class="dropdown-menu">
+        <li><a href="http://vumc.box.com">Box</a></li>
+        <li><a href="https://sso.vanderbilt.edu/idp/startSSO.ping?PartnerSpId=concur_vumc">Concur</a>
+        </li>
+        <li><a href="https://hr.mc.vanderbilt.edu/">HR</a></li>
+        <li><a href="https://hr.mc.vanderbilt.edu/holiday-calendar.php">HR - Holidays</a></li>
+        <li>
+            <a href="https://kronosprod.mis.vanderbilt.edu/wfc/applications/wtk/html/ess/logon.jsp">Kronos</a>
+        </li>
+        <li data-container="body" data-toggle="popover" data-placement="bottom"
+            data-content="Call: 615-936-1215, option 3"><a
+                href="https://www.mc.vanderbilt.edu/parking">Parking</a>
+        </li>
+        <li><a href="https://jprod.its.vanderbilt.edu/apps6/acctauthreq/ResIDReqAction.action?operType=resReq">ResourceID</a></li>
+        <li><a href="https://accellion.mc.vanderbilt.edu/courier/1000@/mail_user_login.html">Secure
+            Email</a></li>
+        <li><a href="https://vumc.onthehub.com/">Software Store</a></li>
+    </ul>
 	</li>
 	<li>
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">External <span class="caret"></span></a>
