--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,9 +6,15 @@
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Timeoff Calendar"><a href="https://daybreak.mc.vanderbilt.edu"><i class="fa fa-calendar" aria-hidden="true"></i></a></li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Amazon Web Services"><a href="https://aws.amazon.com/"><i class="fa fa-amazon" aria-hidden="true"></i></a>
+  </li>
+	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Google Cloud"><a href="https://console.cloud.google.com"><i class="fa fa-google" aria-hidden="true"></i></a>
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Pegasus Tickets">
-		<a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="fa fa-ticket" aria-hidden="true"></i></a></li>
+    <a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="fa fa-ticket" aria-hidden="true"></i></a></li>
+    <li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Splunk"><a href="https://splunk.ea.vanderbilt.edu/"><i class="fa fa-eye" aria-hidden="true"></i></a>
+    </li>
+    <li data-container="body" data-toggle="popover" data-placement="bottom" data-content="StatusCake"><a href="https://statuscake.com/"><i class="fa fa-birthday-cake" aria-hidden="true"></i></a>
+    </li>
 	<li>
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-object-group" aria-hidden="true"></i> <span
                   class="caret"></span></a>
@@ -27,8 +33,6 @@
 			<li><a href="/icons/">Icons</a></li>
 		</ul>
 	</li>
-	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Splunk"><a href="https://splunk.ea.vanderbilt.edu/"><i class="fa fa-eye" aria-hidden="true"></i></a>
-	</li>
 	<li id="database">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-database" aria-hidden="true"></i> <span
                   class="caret"></span></a>
@@ -44,9 +48,6 @@
 			<li><a href="https://www.google.com/analytics/">Google Analytics</a></li>
 			<li><a href="https://victrstats.mc.vanderbilt.edu/">piwik</a></li>
 		</ul>
-	</li>
-
-	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="StatusCake"><a href="https://statuscake.com/"><i class="fa fa-birthday-cake" aria-hidden="true"></i></a>
 	</li>
 	<li id="documentation">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-book" aria-hidden="true"></i> <span
