--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -19,18 +19,18 @@
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-object-group" aria-hidden="true"></i> <span
                   class="caret"></span></a>
 		<ul class="dropdown-menu">
-			<li><a href="/layout/VICTR.pdf">VICTR Layout</a></li>
-			<li><a href="/layout/DER.pdf">DER Layout</a></li>
+			<li><a href="{{ "/layout/VICTR.pdf" | relative_url }}">VICTR Layout</a></li>
+			<li><a href="{{ "/layout/DER.pdf" | relative_url }}">DER Layout</a></li>
 		</ul>
 	</li>
 	<li id="departmentMenu">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-archive" aria-hidden="true"></i> <span
                   class="caret"></span></a>
 		<ul class="dropdown-menu">
-			<li><a href="/newsletters.html">Newsletters</a></li>
+			<li><a href="{{ "/newsletters.html" | relative_url }}">Newsletters</a></li>
 			<li role="separator" class="divider"></li>
-			<li><a href="/logos.html">Logos</a></li>
-			<li><a href="/icons/">Icons</a></li>
+			<li><a href="{{ "/icons/iconfont/demo.html" | relative_url }}">IconFront</a></li>
+      <li><a href="{{ "/icons/sprite/demo.html" | relative_url }}">Sprite</a></li>
 		</ul>
 	</li>
 	<li id="database">
@@ -54,8 +54,8 @@
                   class="caret"></span></a>
 		<ul class="dropdown-menu">
 			<li><a href="https://github.com/vanderbilt/victrcore/wiki">Wiki</a></li>
-			<li><a href="/styleguide.html">CSS Styleguide</a></li>
-			<li><a href="/jsdoc.html">JavaScript documentation</a></li>
+			<li><a href="{{ "/styleguide.html" | relative_url }}">CSS Styleguide</a></li>
+			<li><a href="{{ "/jsdoc.html" | relative_url }}">JavaScript documentation</a></li>
 		</ul>
 	</li>
 </ul>
