--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,8 @@
 /// @author Tom LeZotte
 
 @import "variables";
+@import "victr_fonts";
+@import "victr_variables";
 @import "default";
 @import "ribbon";
 @import "hovermenu";
