scss and jekyll

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -29,8 +29,8 @@
 		<ul class="dropdown-menu">
 			<li><a href="{{ "/newsletters.html" | relative_url }}">Newsletters</a></li>
 			<li role="separator" class="divider"></li>
-			<li><a href="{{ "/icons/iconfont/demo.html" | relative_url }}">IconFront</a></li>
-      <li><a href="{{ "/icons/sprite/demo.html" | relative_url }}">Sprite</a></li>
+			<li><a href="{{ "/icons/iconfont.html" | relative_url }}">IconFront</a></li>
+      <li><a href="{{ "/icons/sprite.html" | relative_url }}">Sprite</a></li>
 		</ul>
 	</li>
 	<li id="database">
