--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,8 @@
 
 /// @author Tom LeZotte
 
+$icomoon-font-path: {{ "/assets/fonts" | relative_url }} !default;
+
 @import "variables";
 @import "victr_variables";
 @import "victr_fonts";
