--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,8 +10,8 @@
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Google Cloud"><a href="https://console.cloud.google.com"><i class="fa fa-google" aria-hidden="true"></i></a>
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Pegasus Tickets">
-		<a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="fa fa-ticket" aria-hidden="true"></i></a></li>
-	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Splunk"><a href="https://splunk.ea.vanderbilt.edu/"><i class="fa fa-eye" aria-hidden="true"></i></a>
+		<a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="brands b-pegasus" aria-hidden="true"></i></a></li>
+	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Splunk"><a href="https://splunk.ea.vanderbilt.edu/"><i class="brands b-splunk" aria-hidden="true"></i></a>
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="StatusCake"><a href="https://statuscake.com/"><i class="fa fa-birthday-cake" aria-hidden="true"></i></a>
 	</li>
