moved relative_url to iframe.html

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-			<a class="navbar-brand" href="{{ site.url }}" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Homepage"><i class="{{ site.icon }}" aria-hidden="true"></i></a>
+			<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Homepage"><i class="{{ site.icon }}" aria-hidden="true"></i></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
