--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -21,7 +21,7 @@
 <section id="mainContentArea" class="container-fluid">
 
     <div class="col-md-10 col-md-offset-1">
-        <iframe src="{{ page.iframe }}" frameborder="0" height="100%" width="100%"></iframe>
+        <iframe src="{{ page.iframe | relative_url }}" frameborder="0" height="100%" width="100%"></iframe>
     </div>
 
 </section>
