menu and font update

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -20,7 +20,7 @@
                   class="caret"></span></a>
 		<ul class="dropdown-menu">
 			<li><a href="{{ "/layout/VICTR.pdf" | relative_url }}">VICTR Layout</a></li>
-			<li><a href="{{ "/layout/DER.pdf" | relative_url }}">DER Layout</a></li>
+			<!-- <li><a href="{{ "/layout/DER.pdf" | relative_url }}">DER Layout</a></li> -->
 		</ul>
 	</li>
 	<li id="departmentMenu">
@@ -56,8 +56,8 @@
                   class="caret"></span></a>
 		<ul class="dropdown-menu">
 			<li><a href="https://github.com/vanderbilt/victrcore/wiki">Wiki</a></li>
-			<!-- <li><a href="{{ "/styleguide.html" | relative_url }}">CSS Styleguide</a></li> -->
-			<!-- <li><a href="{{ "/jsdoc.html" | relative_url }}">JavaScript documentation</a></li> -->
+			<li><a href="{{ "/styleguide.html" | relative_url }}">CSS Styleguide</a></li>
+			<li><a href="{{ "/jsdoc.html" | relative_url }}">JavaScript documentation</a></li>
 		</ul>
 	</li>
 </ul>
