--- a/_scss/_brands_fonts.scss
+++ b/_scss/_brands_fonts.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'brands';
-  src:  url('#{$icomoon-font-path}/brands.eot?#{$brands-font-version}');
-  src:  url('#{$icomoon-font-path}/brands.eot?#{$brands-font-version}#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/brands.ttf?#{$brands-font-version}') format('truetype'),
-    url('#{$icomoon-font-path}/brands.woff?#{$brands-font-version}') format('woff'),
-    url('#{$icomoon-font-path}/brands.svg?#{$brands-font-version}#brands') format('svg');
+  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7');
+  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/brands.ttf?yo4ds7') format('truetype'),
+    url('#{$icomoon-font-path}/brands.woff?yo4ds7') format('woff'),
+    url('#{$icomoon-font-path}/brands.svg?yo4ds7#brands') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,9 +26,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.b-pegasus {
+.b-pivotaltracker {
   &:before {
-    content: $b-pegasus;
+    content: $b-pivotaltracker;
+  }
+}
+.b-statuscake {
+  &:before {
+    content: $b-statuscake;
   }
 }
 .b-splunk {
@@ -36,4 +41,3 @@
     content: $b-splunk;
   }
 }
-
