--- a/icons/brands/style.css
+++ b/icons/brands/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'brands';
-  src:  url('fonts/brands.eot?9bd2yy');
-  src:  url('fonts/brands.eot?9bd2yy#iefix') format('embedded-opentype'),
-    url('fonts/brands.ttf?9bd2yy') format('truetype'),
-    url('fonts/brands.woff?9bd2yy') format('woff'),
-    url('fonts/brands.svg?9bd2yy#brands') format('svg');
+  src:  url('fonts/brands.eot?yo4ds7');
+  src:  url('fonts/brands.eot?yo4ds7#iefix') format('embedded-opentype'),
+    url('fonts/brands.ttf?yo4ds7') format('truetype'),
+    url('fonts/brands.woff?yo4ds7') format('woff'),
+    url('fonts/brands.svg?yo4ds7#brands') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,8 +24,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.b-pegasus:before {
+.b-pivotaltracker:before {
   content: "\e900";
+}
+.b-statuscake:before {
+  content: "\e902";
 }
 .b-splunk:before {
   content: "\e901";
