--- a/icons/brands/style.scss
+++ b/icons/brands/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'brands';
-  src:  url('#{$icomoon-font-path}/brands.eot?9bd2yy');
-  src:  url('#{$icomoon-font-path}/brands.eot?9bd2yy#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/brands.ttf?9bd2yy') format('truetype'),
-    url('#{$icomoon-font-path}/brands.woff?9bd2yy') format('woff'),
-    url('#{$icomoon-font-path}/brands.svg?9bd2yy#brands') format('svg');
+  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7');
+  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/brands.ttf?yo4ds7') format('truetype'),
+    url('#{$icomoon-font-path}/brands.woff?yo4ds7') format('woff'),
+    url('#{$icomoon-font-path}/brands.svg?yo4ds7#brands') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,9 +26,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.b-pegasus {
+.b-pivotaltracker {
   &:before {
-    content: $b-pegasus;
+    content: $b-pivotaltracker;
+  }
+}
+.b-statuscake {
+  &:before {
+    content: $b-statuscake;
   }
 }
 .b-splunk {
