--- a/icons/brands/variables.scss
+++ b/icons/brands/variables.scss
@@ -1,5 +1,6 @@
 $icomoon-font-path: "fonts" !default;
 
-$b-pegasus: "\e900";
+$b-pivotaltracker: "\e900";
+$b-statuscake: "\e902";
 $b-splunk: "\e901";
 
