new icons to menu

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 {% assign sorted_pages = site.pages | sort:"weight" %}
 <!-- Collect the nav links, forms, and other content for toggling -->
 <ul class="nav navbar-nav">
-	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Pivotal Tracker"><a href="https://www.pivotaltracker.com">Pivotal</a></li>
+	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Pivotal Tracker"><a href="https://www.pivotaltracker.com"><i class="brands b-pivotaltracker" aria-hidden="true"></i></a></li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Github"><a href="https://github.com/"><i class="fa fa-github" aria-hidden="true"></i></a>
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Timeoff Calendar"><a href="https://daybreak.mc.vanderbilt.edu"><i class="fa fa-calendar" aria-hidden="true"></i></a></li>
@@ -10,10 +10,10 @@
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Google Cloud"><a href="https://console.cloud.google.com"><i class="fa fa-google" aria-hidden="true"></i></a>
 	</li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Pegasus Tickets">
-		<a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="brands b-pegasus" aria-hidden="true"></i></a></li>
+		<a href="https://pegasus.mc.vanderbilt.edu/Default.aspx"><i class="victr v-pegasus" aria-hidden="true"></i></a></li>
 	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="Splunk"><a href="https://splunk.ea.vanderbilt.edu/"><i class="brands b-splunk" aria-hidden="true"></i></a>
 	</li>
-	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="StatusCake"><a href="https://statuscake.com/"><i class="fa fa-birthday-cake" aria-hidden="true"></i></a>
+	<li data-container="body" data-toggle="popover" data-placement="bottom" data-content="StatusCake"><a href="https://statuscake.com/"><i class="brands b-statuscake" aria-hidden="true"></i></a>
 	</li>
 	<li>
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-object-group" aria-hidden="true"></i> <span
