--- a/_scss/_victr_fonts.scss
+++ b/_scss/_victr_fonts.scss
@@ -1,12 +1,10 @@
-@import "victr_variables";
-
 @font-face {
   font-family: 'victr';
-  src:  url('#{$icomoon-font-path}/victr.eot?#{$victr-font-version}');
-  src:  url('#{$icomoon-font-path}/victr.eot?#{$victr-font-version}#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/victr.ttf?#{$victr-font-version}') format('truetype'),
-    url('#{$icomoon-font-path}/victr.woff?#{$victr-font-version}') format('woff'),
-    url('#{$icomoon-font-path}/victr.svg?#{$victr-font-version}#victr') format('svg');
+  src:  url('#{$icomoon-font-path}/victr.eot?17o7k0');
+  src:  url('#{$icomoon-font-path}/victr.eot?17o7k0#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/victr.ttf?17o7k0') format('truetype'),
+    url('#{$icomoon-font-path}/victr.woff?17o7k0') format('woff'),
+    url('#{$icomoon-font-path}/victr.svg?17o7k0#victr') format('svg');
   font-weight: normal;
   font-style: normal;
 }
