more apps and fonts

--- a/_scss/_victr_variables.scss
+++ b/_scss/_victr_variables.scss
@@ -1,3 +1,6 @@
 $v-vumc: "\e901";
 $v-redcap: "\e900";
-
+$v-pegasus: "\e902";
+$v-esmart: "\e903";
+$v-researchmatch: "\e904";
+$v-starbrite: "\e905";
