--- a/icons/brands/style.css
+++ b/icons/brands/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'brands';
-  src:  url('fonts/brands.eot?yo4ds7');
-  src:  url('fonts/brands.eot?yo4ds7#iefix') format('embedded-opentype'),
-    url('fonts/brands.ttf?yo4ds7') format('truetype'),
-    url('fonts/brands.woff?yo4ds7') format('woff'),
-    url('fonts/brands.svg?yo4ds7#brands') format('svg');
+  src:  url('fonts/brands.eot?ya9f4e');
+  src:  url('fonts/brands.eot?ya9f4e#iefix') format('embedded-opentype'),
+    url('fonts/brands.ttf?ya9f4e') format('truetype'),
+    url('fonts/brands.woff?ya9f4e') format('woff'),
+    url('fonts/brands.svg?ya9f4e#brands') format('svg');
   font-weight: normal;
   font-style: normal;
 }
