--- a/icons/victr/variables.scss
+++ b/icons/victr/variables.scss
@@ -2,4 +2,8 @@ $icomoon-font-path: "fonts" !default;
 
 $v-vumc: "\e901";
 $v-redcap: "\e900";
+$v-pegasus: "\e902";
+$v-esmart: "\e903";
+$v-researchmatch: "\e904";
+$v-starbrite: "\e905";
 
