--- a/_scss/_victr_fonts.scss
+++ b/_scss/_victr_fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'victr';
-  src:  url('#{$icomoon-font-path}/victr.eot?17o7k0');
-  src:  url('#{$icomoon-font-path}/victr.eot?17o7k0#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/victr.ttf?17o7k0') format('truetype'),
-    url('#{$icomoon-font-path}/victr.woff?17o7k0') format('woff'),
-    url('#{$icomoon-font-path}/victr.svg?17o7k0#victr') format('svg');
+  src:  url('#{$icomoon-font-path}/victr.eot?up8vlp');
+  src:  url('#{$icomoon-font-path}/victr.eot?up8vlp#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/victr.ttf?up8vlp') format('truetype'),
+    url('#{$icomoon-font-path}/victr.woff?up8vlp') format('woff'),
+    url('#{$icomoon-font-path}/victr.svg?up8vlp#victr') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-.v {
+.victr {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'victr' !important;
   speak: none;
@@ -32,6 +32,26 @@
 .v-redcap {
   &:before {
     content: $v-redcap;
+  }
+}
+.v-pegasus {
+  &:before {
+    content: $v-pegasus;
+  }
+}
+.v-esmart {
+  &:before {
+    content: $v-esmart;
+  }
+}
+.v-researchmatch {
+  &:before {
+    content: $v-researchmatch;
+  }
+}
+.v-starbrite {
+  &:before {
+    content: $v-starbrite;
   }
 }
 
