--- a/icons/brands/style.scss
+++ b/icons/brands/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'brands';
-  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7');
-  src:  url('#{$icomoon-font-path}/brands.eot?yo4ds7#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/brands.ttf?yo4ds7') format('truetype'),
-    url('#{$icomoon-font-path}/brands.woff?yo4ds7') format('woff'),
-    url('#{$icomoon-font-path}/brands.svg?yo4ds7#brands') format('svg');
+  src:  url('#{$icomoon-font-path}/brands.eot?ya9f4e');
+  src:  url('#{$icomoon-font-path}/brands.eot?ya9f4e#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/brands.ttf?ya9f4e') format('truetype'),
+    url('#{$icomoon-font-path}/brands.woff?ya9f4e') format('woff'),
+    url('#{$icomoon-font-path}/brands.svg?ya9f4e#brands') format('svg');
   font-weight: normal;
   font-style: normal;
 }
